fix: alignment of link-items without line-clamp

--- a/src/scss/linkList.scss
+++ b/src/scss/linkList.scss
@@ -38,6 +38,7 @@
     .drag-handle {
       cursor: ns-resize;
       margin-right: 5px;
+      min-width: 25px;
 
       svg {
         fill: transparent;
@@ -55,6 +56,7 @@
 
   div:nth-child(2) {
     flex: 1;
+    overflow: hidden;
   }
 }
 
